# pensive

./: .gitignore  README  cli.py  db.py  main.py  pyproject.toml
embeddings/: __init__.py  faiss_index.py  generator.py  indexer.py
storage/: __init__.py  sqlite_engine.py
