[project]
name = "pensivedb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sentence-transformers>=5.1.2",
]

[tool.ty.environment]
python = "./.venv"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
division-by-zero = "ignore"
